app/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: k8sacademy/hello-app:2.0
        resources:
          limits:
            memory: "32Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
